<resources>
    <string name="app_name">KickerUp</string>

    <!-- Common -->
    <string name="common_log_out">Log out</string>
    <string name="common_goals">%1$d:%2$d</string>

    <!-- Auth Screen -->
    <string name="screen_auth_title">Привет!</string>
    <string name="screen_auth_name">имя</string>
    <string name="screen_auth_password">Пароль</string>

    <!-- Leaderboard screen -->
    <string name="leaderboard">Leaderboard</string>

    <!-- Profile screen -->
    <string name="profile">Profile</string>
    <string name="profile_points">Баллов</string>
    <string name="profile_games">Игр</string>
    <string name="profile_goals">Голов</string>
    <string name="screen_start_game_first_command">Команда 1</string>
    <string name="screen_start_game_second_command">Команда 2</string>
    <string name="screen_start_game_title">Гоу?</string>
    <string name="screen_start_game_player_1">1</string>
    <string name="screen_start_game_player_2">2</string>
    <string name="screen_start_game_player_3">3</string>
    <string name="screen_start_game_player_4">4</string>
</resources>
