<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/toolbar"/>

    <TextView
        android:id="@+id/firstCommandText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:rotation="-90"
        android:text="@string/screen_start_game_first_command"
        android:textAppearance="@style/Text.Black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/secondCommandText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/secondCommandText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:rotation="-90"
        android:text="@string/screen_start_game_second_command"
        android:textAppearance="@style/Text.Black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstCommandText"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/playerInput1"
        style="@style/BoxInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/normal_gap"
        app:layout_constraintBottom_toTopOf="@id/firstCommandText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/firstCommandText">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/screen_start_game_player_1"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/playerInput2"
        style="@style/BoxInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/normal_gap"
        android:layout_marginEnd="@dimen/normal_gap"
        app:layout_constraintTop_toBottomOf="@id/playerInput1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/firstCommandText">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/screen_start_game_player_2"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/playerInput3"
        style="@style/BoxInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/normal_gap"
        app:layout_constraintBottom_toTopOf="@id/secondCommandText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/secondCommandText">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/screen_start_game_player_3"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/playerInput4"
        style="@style/BoxInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/normal_gap"
        android:layout_marginEnd="@dimen/normal_gap"
        app:layout_constraintTop_toBottomOf="@id/playerInput3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/firstCommandText">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/screen_start_game_player_4"/>
    </android.support.design.widget.TextInputLayout>
</android.support.constraint.ConstraintLayout>